# jscam

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md
examples/: canvas.html  fan.js  hexgrid.js  lathe.js  load_json.js  machine.js  mill.js  modelc.test.stock  play.js  pocket.js  sherline.js  spiral_test.js  turn.js
examples/backplot/: backplot.html  canvas.html
examples/tools/: HSS 2mm 2 flute End Mill.json  HSS 3mm 4 flute End Mill.json
lib/: backplot.js  gcode.js  partc.js  spiral.js
src/: CMakeLists.txt  js.cpp  js.h  jscam.cpp  jsgeom.cpp  jsgeom.h  jsmachine.cpp  jsmachine.h  jsnef.cpp  jsnef.h  jspath.cpp  jspath.h  jsrs274ngc.cpp  jsrs274ngc.h  machine.js  platform.cpp  platform.h
test/: CMakeLists.txt  args.js  basic.js  bbox.js  exercise.js  generated.js  interface.js  mill.js  model.js  push_state.js  rs274ngc.js  simple.js  simple_stock.js  spiral_test.html
tools/: modelc.js
